fix: desacoplamiento y cambio en las queries